# sls

./: README.md  pyproject.toml  pyrightconfig.json
sls/: circular_list.py  folder.py  image.py  image_carousel.py  image_folder.py  image_library.py  image_panel.py  section.py  sls.kv  sls.py  sparsegridlayout.py  utils.py
tests/: test_sls.py
