[tool.poetry]
name = "sls"
version = "0.1.0"
description = ""
authors = ["Joost Kremers <joostkremers@fastmail.fm>"]

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.0.0"
Pillow = "^8.1.2"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
debugpy = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
